[gd_scene load_steps=9 format=3 uid="uid://r3b4g86f7l6x"]

[ext_resource type="Script" path="res://Escenas/Cofre/cofre.gd" id="1_5a08q"]
[ext_resource type="Texture2D" uid="uid://chlbo2qt3apt7" path="res://Sprites/temporales_UI/cofretemp.png" id="2_wfqby"]
[ext_resource type="Texture2D" uid="uid://b2ivbnl772jf" path="res://Sprites/UI/upKey.png" id="3_bhoaq"]

[sub_resource type="Animation" id="Animation_qs0vi"]
resource_name = "AbrirCofre"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_1frg3"]
resource_name = "CerrarCofre"

[sub_resource type="Animation" id="Animation_1sr1x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ak1nw"]
_data = {
"AbrirCofre": SubResource("Animation_qs0vi"),
"CerrarCofre": SubResource("Animation_1frg3"),
"RESET": SubResource("Animation_1sr1x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7rvs"]
size = Vector2(260, 602)

[node name="Cofre" type="Node2D"]
scale = Vector2(0.15, 0.15)
script = ExtResource("1_5a08q")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wfqby")
hframes = 5
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ak1nw")
}

[node name="Spr_up_key_ladder" type="Sprite2D" parent="."]
visible = false
position = Vector2(27, -29)
scale = Vector2(9.41667, 10.4808)
texture = ExtResource("3_bhoaq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(27, -36)
shape = SubResource("RectangleShape2D_w7rvs")

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
